--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,10 +20,7 @@
       "jdkPath": "${env:JAVA_HOME}/bin",
       "cwd": "${fileDirname}",
       "startupClass": "${fileBasenameNoExtension}",
-      "classpath": [
-        ".",
-        "${fileDirname}"
-      ]
+      "classpath": [".", "${fileDirname}"]
     },
     {
       "name": "Java Console App",
@@ -33,10 +30,7 @@
       "jdkPath": "${env:JAVA_HOME}/bin",
       "cwd": "${fileDirname}",
       "startupClass": "${fileBasenameNoExtension}",
-      "classpath": [
-        ".",
-        "${fileDirname}"
-      ],
+      "classpath": [".", "${fileDirname}"],
       "externalConsole": true
     }
   ]
